# mcp-server-vietnam-stock-trading

./: .dockerignore  DEPLOY.md  DOCKER.md  Dockerfile  Dockerfile.simple  Makefile  README.md  README_vn.md  codecov.yml  docker-compose.prod.yml  docker-compose.streamable-http.yml  docker-compose.yml  pyproject.toml  render.yaml
.gitea/workflows/: test.yml
scripts/: deploy.sh
src/vnstock_mcp/: server.py
