[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mao Bui", email = "maonguyen199873@gmail.com"},
]
dependencies = ["mcp>=1.13.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
